--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <div id = "header">&nbspWelcome to JavRedstone.github.io</div>
         <div id = "webContainer"></div>
+        <div id = "directions">To start, click on one of the descriptions or links on the website list.</div>
         <div id = "displayContainer">
             <div id = "displayText">Interactive Iframe of Tool</div>
             <iframe id = "displayMenu"></iframe>
