--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel = "stylesheet" href = "styles.css">
+        <title>JavRedstone's Github Page</title>
     </head>
     <body>
         <div id = "header">&nbspWelcome to JavRedstone.github.io</div>
